<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/actionbar_bg"
    android:padding="@dimen/actionbar_padding" >

    <Button
        android:id="@+id/actionbar_signin_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:background="@drawable/actionbar_back"
        android:gravity="center"
        android:text="@string/actionbar_signin_back"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/actionbar_signin_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/actionbar_signin_title"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/actionbar_signin_forward"
        android:layout_width="70dp"
        android:layout_height="42dp"
        android:layout_gravity="right"
        android:background="@drawable/actionbar_forward"
        android:gravity="center"
        android:shadowRadius="10"
        android:text="@string/actionbar_signin_forward"
        android:textColor="@color/white" />

</FrameLayout>